--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-native-asset": "^2.1.1",
     "react-native-calendars": "^1.1304.1",
     "react-native-camera": "^4.2.1",
+    "react-native-permissions": "^4.1.5",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.0.3"
